--- a/gameboy/Debug/makefile
+++ b/gameboy/Debug/makefile
@@ -26,7 +26,7 @@ endif
 all: gameboy
 
 dependents:
-	-cd /home/utnso/workspace/digiCommons/Debug && $(MAKE) clean all
+	-cd /home/utnso/workspace/digiCommons/Debug && $(MAKE) all
 
 # Tool invocations
 gameboy: $(OBJS) $(USER_OBJS) /home/utnso/workspace/digiCommons/Debug/libdigiCommons.so
