agregado comunicacion con otros modulos

--- a/GameCard/.project
+++ b/GameCard/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>so-commons-library</project>
 		<project>tp-2020-1c-Digimon</project>
+		<project>digiCommons</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
