--- a/team/Debug/makefile
+++ b/team/Debug/makefile
@@ -23,21 +23,25 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: libdigiCommons.so
+all: team
+
+dependents:
+	-cd /home/utnso/workspace/digiCommons/Debug && $(MAKE) clean all
 
 # Tool invocations
-libdigiCommons.so: $(OBJS) $(USER_OBJS)
+team: $(OBJS) $(USER_OBJS) /home/utnso/workspace/digiCommons/Debug/libdigiCommons.so
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross GCC Linker'
-	gcc -shared -o "libdigiCommons.so" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc -L"/home/utnso/workspace/digiCommons/Debug" -o "team" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(LIBRARIES)$(OBJS)$(C_DEPS) libdigiCommons.so
+	-$(RM) $(EXECUTABLES)$(OBJS)$(C_DEPS) team
 	-@echo ' '
 
 .PHONY: all clean dependents
+/home/utnso/workspace/digiCommons/Debug/libdigiCommons.so:
 
 -include ../makefile.targets
