--- a/team/digiCommons/.project
+++ b/team/digiCommons/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tp-2020-1c-Digimon</name>
+	<name>digiCommons</name>
 	<comment></comment>
 	<projects>
-		<project>digiCommons</project>
-		<project>so-commons-library</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
